lib/src/pq/generated_bindings_pq.dart


  late final _PQdefaultSSLKeyPassHook_OpenSSLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Pointer<PGconn>)>>('PQdefaultSSLKeyPassHook_OpenSSL');
  late final _PQdefaultSSLKeyPassHook_OpenSSL =
      _PQdefaultSSLKeyPassHook_OpenSSLPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<PGconn>)>();
}

typedef va_list = ffi.Pointer<ffi.Char>;

final class __crt_locale_data_public extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedShort> _locale_pctype;

  @ffi.Int()
  external int _locale_mb_cur_max;

  @ffi.UnsignedInt()
  external int _locale_lc_codepage;
}

final class __crt_locale_pointers extends ffi.Struct {
  external ffi.Pointer<__crt_locale_data> locinfo;

  external ffi.Pointer<__crt_multibyte_data> mbcinfo;
}

final class __crt_locale_data extends ffi.Opaque {}

final class __crt_multibyte_data extends ffi.Opaque {}

final class _Mbstatet extends ffi.Struct {
  @ffi.UnsignedLong()
  external int _Wchar;

  @ffi.UnsignedShort()
  external int _Byte;

  @ffi.UnsignedShort()
  external int _State;
}

final class _iobuf extends ffi.Struct {
  external ffi.Pointer<ffi.Void> _Placeholder;
}

typedef FILE = _iobuf;
typedef wint_t = ffi.UnsignedShort;
typedef Dartwint_t = int;
typedef errno_t = ffi.Int;
typedef Darterrno_t = int;
typedef _locale_t = ffi.Pointer<__crt_locale_pointers>;
typedef rsize_t = ffi.Size;
typedef Dartrsize_t = int;
typedef fpos_t = ffi.LongLong;
typedef Dartfpos_t = int;

abstract class ConnStatusType {
  static const int CONNECTION_OK = 0;
  static const int CONNECTION_BAD = 1;
  static const int CONNECTION_STARTED = 2;
  static const int CONNECTION_MADE = 3;
  static const int CONNECTION_AWAITING_RESPONSE = 4;
  static const int CONNECTION_AUTH_OK = 5;
  static const int CONNECTION_SETENV = 6;
  static const int CONNECTION_SSL_STARTUP = 7;
  static const int CONNECTION_NEEDED = 8;
  static const int CONNECTION_CHECK_WRITABLE = 9;
  static const int CONNECTION_CONSUME = 10;
  static const int CONNECTION_GSS_STARTUP = 11;
  static const int CONNECTION_CHECK_TARGET = 12;
  static const int CONNECTION_CHECK_STANDBY = 13;
}

abstract class PostgresPollingStatusType {
  static const int PGRES_POLLING_FAILED = 0;
  static const int PGRES_POLLING_READING = 1;
  static const int PGRES_POLLING_WRITING = 2;
  static const int PGRES_POLLING_OK = 3;
  static const int PGRES_POLLING_ACTIVE = 4;
}

abstract class ExecStatusType {
  static const int PGRES_EMPTY_QUERY = 0;
  static const int PGRES_COMMAND_OK = 1;
  static const int PGRES_TUPLES_OK = 2;
  static const int PGRES_COPY_OUT = 3;
  static const int PGRES_COPY_IN = 4;
  static const int PGRES_BAD_RESPONSE = 5;
  static const int PGRES_NONFATAL_ERROR = 6;
  static const int PGRES_FATAL_ERROR = 7;
  static const int PGRES_COPY_BOTH = 8;
  static const int PGRES_SINGLE_TUPLE = 9;
  static const int PGRES_PIPELINE_SYNC = 10;
  static const int PGRES_PIPELINE_ABORTED = 11;
}

abstract class PGTransactionStatusType {
  static const int PQTRANS_IDLE = 0;
  static const int PQTRANS_ACTIVE = 1;
  static const int PQTRANS_INTRANS = 2;
  static const int PQTRANS_INERROR = 3;
  static const int PQTRANS_UNKNOWN = 4;
}

abstract class PGVerbosity {
  static const int PQERRORS_TERSE = 0;
  static const int PQERRORS_DEFAULT = 1;
  static const int PQERRORS_VERBOSE = 2;
  static const int PQERRORS_SQLSTATE = 3;
}

abstract class PGContextVisibility {
  static const int PQSHOW_CONTEXT_NEVER = 0;
  static const int PQSHOW_CONTEXT_ERRORS = 1;
  static const int PQSHOW_CONTEXT_ALWAYS = 2;
}

abstract class PGPing {
  static const int PQPING_OK = 0;
  static const int PQPING_REJECT = 1;
  static const int PQPING_NO_RESPONSE = 2;
  static const int PQPING_NO_ATTEMPT = 3;
}

abstract class PGpipelineStatus {
  static const int PQ_PIPELINE_OFF = 0;
  static const int PQ_PIPELINE_ON = 1;
  static const int PQ_PIPELINE_ABORTED = 2;
}

final class pg_conn extends ffi.Opaque {}

final class pg_result extends ffi.Opaque {}

final class pg_cancel extends ffi.Opaque {}

final class pgNotify extends ffi.Struct {
  external ffi.Pointer<ffi.Char> relname;

  @ffi.Int()
  external int be_pid;

  external ffi.Pointer<ffi.Char> extra;

  external ffi.Pointer<pgNotify> next;
}

final class _PQprintOpt extends ffi.Struct {
  @pqbool()
  external int header;

  @pqbool()
  external int align;

  @pqbool()
  external int standard;

  @pqbool()
  external int html3;

  @pqbool()
  external int expanded;

  @pqbool()
  external int pager;

  external ffi.Pointer<ffi.Char> fieldSep;

  external ffi.Pointer<ffi.Char> tableOpt;

  external ffi.Pointer<ffi.Char> caption;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> fieldName;
}

typedef pqbool = ffi.Char;
typedef Dartpqbool = int;

final class _PQconninfoOption extends ffi.Struct {
  external ffi.Pointer<ffi.Char> keyword;

  external ffi.Pointer<ffi.Char> envvar;

  external ffi.Pointer<ffi.Char> compiled;

  external ffi.Pointer<ffi.Char> val;

  external ffi.Pointer<ffi.Char> label;

  external ffi.Pointer<ffi.Char> dispchar;

  @ffi.Int()
  external int dispsize;
}

final class PQArgBlock extends ffi.Struct {
  @ffi.Int()
  external int len;

  @ffi.Int()
  external int isint;

  external UnnamedUnion1 u;
}

final class UnnamedUnion1 extends ffi.Union {
  external ffi.Pointer<ffi.Int> ptr;

  @ffi.Int()
  external int integer;
}

final class pgresAttDesc extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  @Oid()
  external int tableid;

  @ffi.Int()
  external int columnid;

  @ffi.Int()
  external int format;

  @Oid()
  external int typid;

  @ffi.Int()
  external int typlen;

  @ffi.Int()
  external int atttypmod;
}

typedef Oid = ffi.UnsignedInt;
typedef DartOid = int;
typedef PGconn = pg_conn;
typedef PQconninfoOption = _PQconninfoOption;
typedef PGcancel = pg_cancel;
typedef PQnoticeReceiver
    = ffi.Pointer<ffi.NativeFunction<PQnoticeReceiverFunction>>;
typedef PQnoticeReceiverFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> arg, ffi.Pointer<PGresult> res);
typedef DartPQnoticeReceiverFunction = void Function(
    ffi.Pointer<ffi.Void> arg, ffi.Pointer<PGresult> res);
typedef PGresult = pg_result;
typedef PQnoticeProcessor
    = ffi.Pointer<ffi.NativeFunction<PQnoticeProcessorFunction>>;
typedef PQnoticeProcessorFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> arg, ffi.Pointer<ffi.Char> message);
typedef DartPQnoticeProcessorFunction = void Function(
    ffi.Pointer<ffi.Void> arg, ffi.Pointer<ffi.Char> message);
typedef pgthreadlock_t
    = ffi.Pointer<ffi.NativeFunction<pgthreadlock_tFunction>>;
typedef pgthreadlock_tFunction = ffi.Void Function(ffi.Int acquire);
typedef Dartpgthreadlock_tFunction = void Function(int acquire);
typedef PGnotify = pgNotify;
typedef PGresAttDesc = pgresAttDesc;
typedef PQprintOpt = _PQprintOpt;
typedef pg_int64 = ffi.LongLong;
typedef Dartpg_int64 = int;
typedef PQsslKeyPassHook_OpenSSL_type
    = ffi.Pointer<ffi.NativeFunction<PQsslKeyPassHook_OpenSSL_typeFunction>>;
typedef PQsslKeyPassHook_OpenSSL_typeFunction = ffi.Int Function(
    ffi.Pointer<ffi.Char> buf, ffi.Int size, ffi.Pointer<PGconn> conn);
typedef DartPQsslKeyPassHook_OpenSSL_typeFunction = int Function(
    ffi.Pointer<ffi.Char> buf, int size, ffi.Pointer<PGconn> conn);

const int _VCRT_COMPILER_PREPROCESSOR = 1;

const int _SAL_VERSION = 20;

const int __SAL_H_VERSION = 180000000;

const int _USE_DECLSPECS_FOR_SAL = 0;

const int _USE_ATTRIBUTES_FOR_SAL = 0;

const int _CRT_PACKING = 8;

const int _VCRUNTIME_DISABLED_WARNINGS = 4514;

const int _HAS_EXCEPTIONS = 1;

const int _WCHAR_T_DEFINED = 1;

const int NULL = 0;

const int _HAS_CXX17 = 0;

const int _HAS_CXX20 = 0;

const int _HAS_CXX23 = 0;

const int _HAS_NODISCARD = 1;

const int _ARM_WINAPI_PARTITION_DESKTOP_SDK_AVAILABLE = 1;

const int _CRT_BUILD_DESKTOP_APP = 1;

const int _UCRT_DISABLED_WARNINGS = 4324;

const int _ARGMAX = 100;

const int _TRUNCATE = -1;

const int _CRT_INT_MAX = 2147483647;

const int _CRT_SIZE_MAX = -1;

const String __FILEW__ = 'C';

const int _CRT_FUNCTIONS_REQUIRED = 1;

const int _CRT_HAS_CXX17 = 0;

const int _CRT_HAS_C11 = 0;

const int _CRT_INTERNAL_NONSTDC_NAMES = 1;

const int __STDC_SECURE_LIB__ = 200411;

const int __GOT_SECURE_LIB__ = 200411;

const int __STDC_WANT_SECURE_LIB__ = 1;

const int _SECURECRT_FILL_BUFFER_PATTERN = 254;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES = 0;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT = 0;

const int _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES = 1;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY = 0;

const int _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY = 0;

const String _CRT_INTERNAL_STDIO_SYMBOL_PREFIX = '';

const int _CRT_INTERNAL_PRINTF_LEGACY_VSPRINTF_NULL_TERMINATION = 1;

const int _CRT_INTERNAL_PRINTF_STANDARD_SNPRINTF_BEHAVIOR = 2;

const int _CRT_INTERNAL_PRINTF_LEGACY_WIDE_SPECIFIERS = 4;

const int _CRT_INTERNAL_PRINTF_LEGACY_MSVCRT_COMPATIBILITY = 8;

const int _CRT_INTERNAL_PRINTF_LEGACY_THREE_DIGIT_EXPONENTS = 16;

const int _CRT_INTERNAL_PRINTF_STANDARD_ROUNDING = 32;

const int _CRT_INTERNAL_SCANF_SECURECRT = 1;

const int _CRT_INTERNAL_SCANF_LEGACY_WIDE_SPECIFIERS = 2;

const int _CRT_INTERNAL_SCANF_LEGACY_MSVCRT_COMPATIBILITY = 4;

const int WEOF = 65535;

const int BUFSIZ = 512;

const int _NFILE = 512;

const int _NSTREAM_ = 512;

const int _IOB_ENTRIES = 3;

const int EOF = -1;

const int _IOFBF = 0;

const int _IOLBF = 64;

const int _IONBF = 4;

const int L_tmpnam = 260;

const int L_tmpnam_s = 260;

const int SEEK_CUR = 1;

const int SEEK_END = 2;

const int SEEK_SET = 0;

const int FILENAME_MAX = 260;

const int FOPEN_MAX = 20;

const int _SYS_OPEN = 20;

const int TMP_MAX = 2147483647;

const int TMP_MAX_S = 2147483647;

const int _TMP_MAX_S = 2147483647;

const int SYS_OPEN = 20;

const int InvalidOid = 0;

const int PG_DIAG_SEVERITY = 83;

const int PG_DIAG_SEVERITY_NONLOCALIZED = 86;

const int PG_DIAG_SQLSTATE = 67;

const int PG_DIAG_MESSAGE_PRIMARY = 77;

const int PG_DIAG_MESSAGE_DETAIL = 68;

const int PG_DIAG_MESSAGE_HINT = 72;

const int PG_DIAG_STATEMENT_POSITION = 80;

const int PG_DIAG_INTERNAL_POSITION = 112;

const int PG_DIAG_INTERNAL_QUERY = 113;

const int PG_DIAG_CONTEXT = 87;

const int PG_DIAG_SCHEMA_NAME = 115;

const int PG_DIAG_TABLE_NAME = 116;

const int PG_DIAG_COLUMN_NAME = 99;

const int PG_DIAG_DATATYPE_NAME = 100;

const int PG_DIAG_CONSTRAINT_NAME = 110;

const int PG_DIAG_SOURCE_FILE = 70;

const int PG_DIAG_SOURCE_LINE = 76;

const int PG_DIAG_SOURCE_FUNCTION = 82;

const int LIBPQ_HAS_PIPELINING = 1;

const int LIBPQ_HAS_TRACE_FLAGS = 1;

const int LIBPQ_HAS_SSL_LIBRARY_DETECTION = 1;

const int PG_COPYRES_ATTRS = 1;

const int PG_COPYRES_TUPLES = 2;

const int PG_COPYRES_EVENTS = 4;

const int PG_COPYRES_NOTICEHOOKS = 8;

const int PQTRACE_SUPPRESS_TIMESTAMPS = 1;

const int PQTRACE_REGRESS_MODE = 2;

const int PQ_QUERY_PARAM_MAX_LIMIT = 65535;

const String PQnoPasswordSupplied = 'fe_sendauth: no password supplied\n';
